--- a/static-shared-libraries/static-shared-libraries.ipynb
+++ b/static-shared-libraries/static-shared-libraries.ipynb
@@ -91,7 +91,7 @@
     "- Uses the **ar** (archive) command to create the library (with **crv** flags - create, replace, verbose)\n",
     "- Links together object files\n",
     "\n",
-    "``` ar crv lib.a prog1.c prog2.c ```\n",
+    "``` ar crv lib.a prog1.o prog2.o ```\n",
     "\n",
     "<!-- ![Making Static Libraries Visualized](Making-Static-Libraries.png) -->"
    ]
