Finished Static-Shared Libraries
Finished this section, pretty easy but good little review. Also added a TODO markdown file to keep track of everything.

--- a/static-shared-libraries/static-shared-libraries.ipynb
+++ b/static-shared-libraries/static-shared-libraries.ipynb
@@ -113,7 +113,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shared Libraries \n"
+    "## Shared Libraries \n",
+    "- Creates a .so file (ex, libBF.so)\n",
+    "- Can be linked to any program at runtime. Once loaded, can be used by any number of programs, saving memory space.\n",
+    "- _Compiled_ with **-fPIC** flag into *position independent code* (required by library)\n",
+    "- Shared library is _created_ using **-shared** flag when turning into **.so** file.\n",
+    "- Can be _attached_ by compiling with other object files\n",
+    "\n",
+    "``` gcc -c -fPIC shared.c ```\n",
+    "``` gcc -shared -o libshared.so shared.o ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "gcc -c -fPIC sample1.c  # Pretend this is library code\n",
+    "gcc -shared -o libshared.so sampleheader.o\n",
+    "gcc -c sample2.c\n",
+    "gcc -o example sample2.c libshared.so  # Compiling with shared library dependency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What's the difference?\n",
+    "- **Shared Libraries** are **loaded into memory at runtime**, allowing for them to be used by multiple programs simultaneously. **Static Libraries**, on the other hand, are **directly compiled into the Executable**, increasing program size but ensuring all code is self-contained.\n",
+    "- Static Libraries are portable, being self-contained and requiring no external dependencies. "
    ]
   }
  ],
