Completed BASH Commands Notebook
Pretty simple & easy. Going to move onto BASH Programming, then probably Shared Memory, Semaphore, and Message Queue.

--- a/static-shared-libraries/static-shared-libraries.ipynb
+++ b/static-shared-libraries/static-shared-libraries.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sample1.c\n"
+      "Overwriting sample1.c\n"
      ]
     }
    ],
